re PR c/54113 (-Wmissing-prototypes produces false alarms for C99 inline functions)

PR c/54113
c/
	* c-decl.c (start_function): Don't warn for missing prototype for
	inline functions.
testsuite/
	* gcc.dg/pr54113.c: New test.

From-SVN: r205680